--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "version": "0.0.1",
   "author": "Cameron Aziz",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "flatpickr": "^4.5.2",
     "fuse.js": "^3.3.0",
     "gatsby": "^2.0.40",
     "gatsby-link": "^2.0.6",
     "gatsby-plugin-postcss": "^2.0.1",
     "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-source-graphql": "^2.0.6",
+    "node-fetch": "^2.2.1",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.4.0",
     "postcss-reporter": "^6.0.0",
     "prop-types": "^15.6.2",
+    "query-string": "^6.2.0",
     "react": "^16.7.0-alpha.0",
     "react-autosuggest": "^9.4.2",
     "react-dom": "^16.7.0-alpha.0",
