--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint src/**/*.js"
+    "eslint": "eslint src/**/*.js",
+    "lint-data": "eslint src/components/SearchPanel/data/airports.js --fix"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
